tests/ui/stability-attribute/default-body-stability-err.stderr
error[E0046]: not all trait items implemented, missing: `CONSTANT`
  --> $DIR/default-body-stability-err.rs:10:1
   |
LL | impl JustTrait for Type {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: default implementation of `CONSTANT` is unstable
   = note: use of unstable library feature 'constant_default_body'
   = help: add `#![feature(constant_default_body)]` to the crate attributes to enable

error[E0046]: not all trait items implemented, missing: `fun`
  --> $DIR/default-body-stability-err.rs:10:1
   |
LL | impl JustTrait for Type {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: default implementation of `fun` is unstable
   = note: use of unstable library feature 'fun_default_body'
   = help: add `#![feature(fun_default_body)]` to the crate attributes to enable

error[E0046]: not all trait items implemented, missing: `fun2`
  --> $DIR/default-body-stability-err.rs:10:1
   |
LL | impl JustTrait for Type {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: default implementation of `fun2` is unstable
   = note: use of unstable library feature 'fun_default_body': reason
   = help: add `#![feature(fun_default_body)]` to the crate attributes to enable

error[E0046]: not all trait items implemented, missing: `eq`
  --> $DIR/default-body-stability-err.rs:15:1
   |
LL | / impl Equal for Type {
LL | |
LL | |     fn neq(&self, other: &Self) -> bool {
LL | |         false
LL | |     }
LL | | }
   | |_^
   |
   = note: default implementation of `eq` is unstable
   = note: use of unstable library feature 'eq_default_body'
   = help: add `#![feature(eq_default_body)]` to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0046`.
